# HiCeeBox

./: .gitignore  HiCeeBox.spec  QUICKSTART_MAC.md  README.md  TESTING_GUI.md  build_macos.sh  pyproject.toml  setup_py2app.py
assets/: README.md  icon.icns
examples/: HiCeeBox_Tutorial.ipynb  README.md  example_config.yaml  minimal_example.yaml  python_api_example.py
hiceebox/: __init__.py
hiceebox/cli/: __init__.py  main.py
hiceebox/matrix/: __init__.py  base.py  cooler_provider.py  hic_provider.py
hiceebox/tracks/: __init__.py  base.py  bed.py  bedpe.py  bigwig.py  gene.py  hic_genome_view.py  hic_triangle.py
hiceebox/utils/: __init__.py  colors.py  config.py  genomics.py  gtf_to_bed12.py
hiceebox/view/: __init__.py  genome_view.py  layout.py
hiceebox_gui/: __init__.py  app.py  canvas.py  controller.py  main_window.py  rthook_mpl_qt.py  state.py  widgets.py
tests/: __init__.py  test_genomics.py  test_imports.py
